# gemini-search

./: .gitignore  README.md  SKILL.md  gemini_search.py  main.py  pyproject.toml
reports/: run-manifest.json
tests/: test_cli.py  test_deep_research.py  test_search.py
